--- a/public/bundle.css
+++ b/public/bundle.css
@@ -3,34 +3,21 @@
   background: #FBFBFB; }
 
 tracker-el {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column;
-          flex-flow: column;
+  flex-flow: column;
   border: solid 1px rgba(227, 227, 223, 0.5);
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   padding: 10px;
   width: 300px;
   margin: 10px 5px; }
 
 body-el {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
+  flex-flow: row wrap;
   background: #FBFBFB;
-  width: 100%; }
+  width: 100%;
+  justify-content: center; }
 
 body {
   background: #8BBE5C;
