--- a/client/styles/settings.scss
+++ b/client/styles/settings.scss
@@ -3,3 +3,6 @@
 $green:#8BBE5C;
 $white:#FBFBFB;
 $grey:#E3E3DF;
+
+$boxshadow:1px 2px 4px 0px rgba(189, 196, 206, 0.6);
+$boxshadow-hover:1px 2px 4px 2px rgba(189, 196, 206, 0.6);
