--- a/client/styles/components/body.scss
+++ b/client/styles/components/body.scss
@@ -1,14 +1,9 @@
 body-el {
-  display: flex;
-  flex-flow: row wrap;
-  background: $white;
-  padding:30px 0;
-  width:100%;
-  justify-content: center;
+
   #create-new-tracker {
     width: 200px;
     height: 220px;
-    background: $green;
+    background: darken($green, 10);
     background-image: url("images/tabs.svg");
     background-repeat: no-repeat;
     background-size: 100px 100px;
@@ -17,17 +12,21 @@ body-el {
     padding: 10px;
     display: flex;
     justify-content: center;
-    align-items: flex-end;
+    align-items: center;
     transition: 0.2s ease;
     cursor: pointer;
     color: black;
+    span {
+      margin-bottom: -80px;
+      transition: 0.2s ease;
+    }
     &:hover {
       transition: 0.2s ease;
-      background: darken($green, 7);
+      background: darken($green, 6);
       background-image: url("images/tabs.svg");
       background-image: url("images/tabs.svg");
       background-repeat: no-repeat;
-      background-size: 90px 90px;
+      background-size: 100px 100px;
       background-position: 50% 30%;
     }
   }
