--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -8,15 +8,11 @@ body {
   padding: 2% 10%;
   font-family: Sniglet;
 
-  legend {
-    background: $white;
-    border-top: 1px solid $grey;
-    border-left: 1px solid $grey;
-    border-right: 1px solid $grey;
-    padding: 2px 4px;
-  }
- 
-  fieldset {
-    border-color: $grey;
+  .container {
+    display: flex;
+    flex-flow: row wrap;
+    padding: 30px 0;
+    width: 100%;
+    justify-content: center;
   }
 }
