--- a/client/styles/settings.scss
+++ b/client/styles/settings.scss
@@ -1,8 +1,8 @@
-@import url("https://fonts.googleapis.com/css?family=Sniglet");
-///colors
-$green:#8BBE5C;
-$white:#FBFBFB;
-$grey:#E3E3DF;
-
-$boxshadow:1px 2px 4px 0px rgba(189, 196, 206, 0.6);
-$boxshadow-hover:1px 2px 4px 2px rgba(189, 196, 206, 0.6);
+@import url("https://fonts.googleapis.com/css?family=Sniglet"); ///colors
+$green: #8BBE5C;
+$white: #FBFBFB;
+$grey: #E3E3DF;
+$dark-grey: #555;
+$boxshadow: 3px 4px 6px 1px rgba(black, 0.2);
+$boxshadow-hover: 1px 2px 4px 2px rgba(189, 196, 206, 0.6);
+$text-black: rgba(black, 0.8);
