--- a/public/bundle.css
+++ b/public/bundle.css
@@ -1,6 +1,54 @@
 @import url("https://fonts.googleapis.com/css?family=Sniglet");
-#tracker-options {
-  background: #FBFBFB; }
+@keyframes swing {
+  from {
+    transform-origin: top;
+    transform: rotateX(0); }
+  45% {
+    transform-origin: top;
+    transform: rotateX(-60deg); }
+  to {
+    transform-origin: top;
+    transform: rotateX(0); } }
+
+#options {
+  background: #FBFBFB;
+  width: 75%;
+  display: flex;
+  flex-flow: row;
+  padding: 15px 5px;
+  justify-content: flex-start;
+  align-items: center;
+  box-shadow: 3px 4px 6px 1px rgba(0, 0, 0, 0.2); }
+  #options #option-inputs {
+    display: flex;
+    flex-flow: column;
+    justify-content: space-around; }
+    #options #option-inputs .option {
+      margin: 7px 0; }
+  #options #date-container {
+    position: absolute;
+    right: 10px;
+    top: 10px; }
+  #options #add-new-tracker {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    position: absolute;
+    bottom: -48px;
+    left: -2px;
+    box-shadow: 3px 4px 6px 1px rgba(0, 0, 0, 0.2);
+    background: rgba(85, 85, 85, 0.7);
+    transition: 0.2s; }
+    #options #add-new-tracker span {
+      padding: 8px 15px;
+      color: #FBFBFB;
+      cursor: pointer; }
+    #options #add-new-tracker:hover {
+      background: rgba(85, 85, 85, 0.8);
+      transition: 0.2s; }
+    #options #add-new-tracker:active {
+      background: rgba(85, 85, 85, 0.9);
+      transition: 0.2s; }
 
 tracker-el {
   display: flex;
@@ -29,7 +77,7 @@ tracker-el {
       background: rgba(139, 190, 92, 0.3); }
   tracker-el:hover {
     background: #E3E3DF;
-    box-shadow: 1px 2px 4px 0px rgba(189, 196, 206, 0.6);
+    box-shadow: 3px 4px 6px 1px rgba(0, 0, 0, 0.2);
     transition: 0.2s ease; }
 
 body-el #create-new-tracker {
@@ -60,6 +108,53 @@ body-el #create-new-tracker {
     background-size: 100px 100px;
     background-position: 50% 30%; }
 
+description-el #description {
+  background: #FBFBFB;
+  min-height: 24px; }
+
+description-el .label {
+  max-height: 16px; }
+
+description-el .text-input {
+  font-size: 12px;
+  padding: 5px 4px 3px 10px;
+  width: 220px;
+  color: black;
+  outline: none;
+  border-top: solid 1px #E3E3DF;
+  border-right: solid 1px #E3E3DF;
+  border-bottom: solid 1px #E3E3DF; }
+
+description-el .hashtag {
+  background: blue;
+  color: white;
+  padding: 1px 2px;
+  border-radius: 2px; }
+
+description-el [placeholder]:empty:before {
+  display: block;
+  content: attr(placeholder);
+  color: rgba(0, 0, 0, 0.8); }
+
+description-el [placeholder]:empty:focus:before {
+  content: ""; }
+
+comments-el #comments {
+  background: #FBFBFB;
+  width: 60vw; }
+
+comments-el .ql-toolbar {
+  background: #FBFBFB;
+  margin-top: 130px; }
+
+#slider-container {
+  display: flex;
+  flex-flow: column;
+  width: 75%;
+  min-height: 500px;
+  padding: 15px 5px;
+  margin-top: 50px; }
+
 body {
   background: #8BBE5C;
   padding: 2% 10%;
@@ -70,3 +165,51 @@ body {
     padding: 30px 0;
     width: 100%;
     justify-content: center; }
+
+.fieldset {
+  position: relative;
+  border: solid 2px #E3E3DF; }
+  .fieldset .legend {
+    position: absolute;
+    left: 5%;
+    top: -20px;
+    background: #FBFBFB;
+    padding: 3px 8px;
+    border: solid 1px #E3E3DF;
+    border-bottom: none; }
+
+.option {
+  display: flex;
+  flex-flow: row nowrap;
+  margin: 0 6px; }
+  .option .label {
+    margin-right: -4px;
+    background: #E3E3DF;
+    padding: 6px 7px;
+    z-index: 5;
+    font-size: 13px; }
+  .option input::placeholder {
+    color: rgba(0, 0, 0, 0.8); }
+  .option input {
+    padding: 3px 8px;
+    z-index: 2;
+    border: none;
+    border-radius: 0;
+    outline: none;
+    border-right: solid 1px #E3E3DF;
+    border-top: solid 1px #E3E3DF;
+    border-bottom: solid 1px #E3E3DF;
+    font-family: Sniglet;
+    font-size: 12px; }
+  .option .date {
+    width: 100px;
+    text-align: left;
+    padding-left: 10px;
+    cursor: pointer;
+    color: #2c3e50;
+    background-color: #E3E3DF;
+    background-image: url("images/calendar.svg");
+    font-weight: bold;
+    background-size: 15px 15px;
+    background-repeat: no-repeat;
+    background-position: 95% 50%; }
