--- a/client/styles/components/comments.scss
+++ b/client/styles/components/comments.scss
@@ -1,7 +1,9 @@
 comments-el {
+  width: 50vw;
+  margin: 0 auto;
+
   #comments {
     background: $white;
-    width: 60vw;
   }
 
   .ql-toolbar {
