--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -2,7 +2,8 @@
 @import "./animations.scss";
 @import "./components/options.scss";
 @import "./components/tracker.scss";
-@import "./components/body.scss";
+@import "./components/home.scss";
+@import "./components/new.scss";
 @import "./components/description.scss";
 @import "./components/comments.scss";
 @import "./components/sliders.scss";
@@ -14,7 +15,6 @@ body {
 
   .container {
     display: flex;
-    flex-flow: row wrap;
     padding: 30px 0;
     width: 100%;
     justify-content: center;
@@ -46,6 +46,9 @@ body {
     padding: 6px 7px;
     z-index: 5;
     font-size: 13px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   input::placeholder {
@@ -58,11 +61,10 @@ body {
     border: none;
     border-radius: 0;
     outline: none;
-    border-right: solid 1px $grey;
-    border-top: solid 1px $grey;
     border-bottom: solid 1px $grey;
     font-family: Sniglet;
     font-size: 12px;
+    background-color: transparent;
   }
   margin: 0 6px;
 
