--- a/client/styles/components/new.scss
+++ b/client/styles/components/new.scss
@@ -6,7 +6,7 @@ newtracker-el {
     flex-flow: row;
     justify-content: center;
     align-self: flex-start;
-
+    margin-left: -7px;
     span {
       padding: 8px 15px;
       color: $white;
@@ -14,8 +14,9 @@ newtracker-el {
       box-shadow: $boxshadow;
       background: rgba($dark-grey, 0.7);
       transition: 0.2s;
-      margin: 0 10px;
-
+      &:nth-of-type(even) {
+        margin-left: 30px;
+      }
       &:hover {
         background: rgba($dark-grey, 0.8);
         transition: 0.2s;
