--- a/client/styles/settings.scss
+++ b/client/styles/settings.scss
@@ -3,7 +3,7 @@ $green: #8BBE5C;
 $white: #FBFBFB;
 $grey: #E3E3DF;
 $dark-grey: #555;
-$dark-green: #4183D7;
+$blue: #4183D7;
 $red:#EC644B;
 $boxshadow: 3px 4px 6px 1px rgba(black, 0.2);
 $boxshadow-hover: 1px 2px 4px 2px rgba(189, 196, 206, 0.6);
