--- a/client/styles/components/new.scss
+++ b/client/styles/components/new.scss
@@ -6,7 +6,7 @@ newtracker-el {
     flex-flow: row;
     justify-content: center;
     align-self: flex-start;
-    margin-left: -7px;
+    margin-left: 13%;
     span {
       padding: 8px 15px;
       color: $white;
